# resume-screening-agent

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/resume_screening_agent/: __init__.py  cli.py  core.py
tests/: test_core.py
