[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-screening-agent"
version = "0.1.0"
description = "Semantic resume screening with multi-factor scoring and ranked shortlists."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/resume-screening-agent"
Issues = "https://github.com/erron-ai/resume-screening-agent/issues"

[project.scripts]
resume-screening-agent = "resume_screening_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
